--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "api.main:app"
+                "src.main:app"
             ],
             "jinja": true,
             "justMyCode": true,
